--- a/profiles/SPATIAL_TOUCH.yaml
+++ b/profiles/SPATIAL_TOUCH.yaml
@@ -1,5 +1,32 @@
-name: SPATIAL_TOUCH
+name: vtouch
 components:
   - id: main
-    capabilities: 
-      
+    capabilities:
+      - id: refresh
+        version: 1
+      - id: talentautumn23825.vtouch
+        version: 1
+    categories:
+      - name: Others
+
+preferences:
+  - title: "LAN Device Name"
+    name: devicename
+    description: "Identifying name of LAN device"
+    required: true
+    preferenceType: string
+    definition:
+      stringType: text
+      minLength: 3
+      maxLength: 36
+      default: "mydevice"
+  - title: "LAN App/Device Address"
+    name: deviceaddr
+    description: "IP address of app or device"
+    required: true
+    preferenceType: string
+    definition:
+      stringType: text
+      minLength: 7
+      maxLength: 15
+      default: "192.168.1.n"
